--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,13 @@
     		<scope>system</scope>   	
     		<systemPath>${sdk.lib.dir}/realtime-sdk.jar</systemPath>	
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.1.2</version>
+		</dependency>
 
 	  
   </dependencies>
